--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="logo" href="./index.html">Web<span>Studio</span></a>
           <ul class="navigation">
             <li class="navigation-list">
-              <a class="navigation-item" href="./index.html">Studio</a>
+              <a class="navigation-item current" href="./index.html">Studio</a>
             </li>
             <li class="navigation-list">
               <a class="navigation-item" href="">Portfolio</a>
@@ -64,6 +64,11 @@
           <h2 class="visually-hidden">Components</h2>
           <ul class="components-list">
             <li class="components-item">
+              <div class="components-icon">
+                <svg width="64px" height="64px" class="components-icon-style">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="components-title">Strategy</h3>
               <p class="components-text">
                 Our goal is to identify the business problem to walk away with
@@ -71,6 +76,11 @@
               </p>
             </li>
             <li class="components-item">
+              <div class="components-icon">
+                <svg width="64px" height="64px" class="components-icon-style">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="components-title">Punctuality</h3>
               <p class="components-text">
                 Bring the key message to the brand's audience for the best price
@@ -78,6 +88,11 @@
               </p>
             </li>
             <li class="components-item">
+              <div class="components-icon">
+                <svg width="64px" height="64px" class="components-icon-style">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="components-title">Diligence</h3>
               <p class="components-text">
                 Research and confirm brands that present the strongest digital
@@ -85,6 +100,11 @@
               </p>
             </li>
             <li class="components-item">
+              <div class="components-icon">
+                <svg width="64px" height="64px" class="components-icon-style">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="components-title">Technologies</h3>
               <p class="components-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -108,6 +128,28 @@
               <div class="team-description">
                 <h3 class="team-people">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <div class="team-bloc-for-icon">
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="team-points">
@@ -120,6 +162,28 @@
               <div class="team-description">
                 <h3 class="team-people">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <div class="team-bloc-for-icon">
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="team-points">
@@ -132,6 +196,28 @@
               <div class="team-description">
                 <h3 class="team-people">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <div class="team-bloc-for-icon">
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
             <li class="team-points">
@@ -144,6 +230,28 @@
               <div class="team-description">
                 <h3 class="team-people">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <div class="team-bloc-for-icon">
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </div>
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </div>
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </div>
+                  <div class="team-icon-bloc">
+                    <svg width="16px" height="16px" class="team-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </div>
+                </div>
               </div>
             </li>
           </ul>
@@ -166,12 +274,21 @@
               </div>
             </li>
             <li class="portfolio-points">
-              <img
-                class="portfolio-photo"
-                src="./images/cashless.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
+              <div class="portfolio-box">
+                <img
+                  class="portfolio-photo"
+                  src="./images/cashless.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="portfolio-container-hover">
+                  <p class="portfolio-text-hover">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage Ap
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-item">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -224,14 +341,41 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-logo-span">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-box">
+        <div class="footer-container">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-logo-span">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-media-bloc">
+          <h2 class="footter-icon-title">Social media</h2>
+          <div class="footer-bloc-for-icon">
+            <div class="footer-icon-bloc">
+              <svg width="24px" height="24px" class="footer-icon">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </div>
+            <div class="footer-icon-bloc">
+              <svg width="24px" height="24px" class="footer-icon">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </div>
+            <div class="footer-icon-bloc">
+              <svg width="24px" height="24px" class="footer-icon">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </div>
+            <div class="footer-icon-bloc">
+              <svg width="24px" height="24px" class="footer-icon">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
