--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <ul class="components-list">
             <li class="components-item">
               <div class="components-icon">
-                <svg width="64px" height="64px" class="components-icon-style">
+                <svg class="components-icon-style" width="64px" height="64px">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -77,7 +77,7 @@
             </li>
             <li class="components-item">
               <div class="components-icon">
-                <svg width="64px" height="64px" class="components-icon-style">
+                <svg class="components-icon-style" width="64px" height="64px">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -89,7 +89,7 @@
             </li>
             <li class="components-item">
               <div class="components-icon">
-                <svg width="64px" height="64px" class="components-icon-style">
+                <svg class="components-icon-style" width="64px" height="64px">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -101,7 +101,7 @@
             </li>
             <li class="components-item">
               <div class="components-icon">
-                <svg width="64px" height="64px" class="components-icon-style">
+                <svg class="components-icon-style" width="64px" height="64px">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -128,28 +128,36 @@
               <div class="team-description">
                 <h3 class="team-people">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
-                <div class="team-bloc-for-icon">
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </div>
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </div>
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </div>
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </div>
-                </div>
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-points">
@@ -162,28 +170,36 @@
               <div class="team-description">
                 <h3 class="team-people">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
-                <div class="team-bloc-for-icon">
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </div>
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </div>
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </div>
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </div>
-                </div>
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-points">
@@ -196,28 +212,36 @@
               <div class="team-description">
                 <h3 class="team-people">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
-                <div class="team-bloc-for-icon">
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </div>
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </div>
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </div>
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </div>
-                </div>
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-points">
@@ -230,28 +254,36 @@
               <div class="team-description">
                 <h3 class="team-people">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
-                <div class="team-bloc-for-icon">
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </div>
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </div>
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </div>
-                  <div class="team-icon-bloc">
-                    <svg width="16px" height="16px" class="team-icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </div>
-                </div>
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a href="" class="team-icon-link">
+                      <svg width="16px" height="16px" class="team-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
