--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <ul class="components-list">
             <li class="components-item">
               <div class="components-icon">
-                <svg class="components-icon-style" width="64px" height="64px">
+                <svg class="components-icon-style" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -77,7 +77,7 @@
             </li>
             <li class="components-item">
               <div class="components-icon">
-                <svg class="components-icon-style" width="64px" height="64px">
+                <svg class="components-icon-style" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -89,7 +89,7 @@
             </li>
             <li class="components-item">
               <div class="components-icon">
-                <svg class="components-icon-style" width="64px" height="64px">
+                <svg class="components-icon-style" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -101,7 +101,7 @@
             </li>
             <li class="components-item">
               <div class="components-icon">
-                <svg class="components-icon-style" width="64px" height="64px">
+                <svg class="components-icon-style" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -131,28 +131,28 @@
                 <ul class="team-icon-list">
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -173,28 +173,28 @@
                 <ul class="team-icon-list">
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -215,28 +215,28 @@
                 <ul class="team-icon-list">
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -257,28 +257,28 @@
                 <ul class="team-icon-list">
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a href="" class="team-icon-link">
-                      <svg width="16px" height="16px" class="team-icon">
+                      <svg width="16" height="16" class="team-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -294,12 +294,19 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-points">
-              <img
-                class="portfolio-photo"
-                src="./images/banking.jpg"
-                alt="Banking App"
-                width="360"
-              />
+              <div class="portfolio-box">
+                <img
+                  class="portfolio-photo"
+                  src="./images/banking.jpg"
+                  alt="Banking App"
+                  width="360"
+                />
+                <p class="portfolio-text-hover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-item">Banking App</h3>
                 <p class="portfolio-text">App</p>
@@ -313,13 +320,11 @@
                   alt="Cashless Payment"
                   width="360"
                 />
-                <div class="portfolio-container-hover">
-                  <p class="portfolio-text-hover">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage Ap
-                  </p>
-                </div>
+                <p class="portfolio-text-hover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-item">Cashless Payment</h3>
@@ -327,42 +332,74 @@
               </div>
             </li>
             <li class="portfolio-points">
-              <img
-                class="portfolio-photo"
-                src="./images/meditation.jpg"
-                alt="Meditation App"
-                width="360"
-              />
+              <div class="portfolio-box">
+                <img
+                  class="portfolio-photo"
+                  src="./images/meditation.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <p class="portfolio-text-hover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-item">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-points">
-              <img
-                class="portfolio-photo"
-                src="./images/taxi.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
+              <div class="portfolio-box">
+                <img
+                  class="portfolio-photo"
+                  src="./images/taxi.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <p class="portfolio-text-hover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-item">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-points">
-              <img
-                src="./images/screen.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
+              <div class="portfolio-box">
+                <img
+                  src="./images/screen.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <p class="portfolio-text-hover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-item">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-points">
-              <img src="./images/online.jpg" alt="Online Courses" width="360" />
+              <div class="portfolio-box">
+                <img
+                  src="./images/online.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <p class="portfolio-text-hover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-border">
                 <h3 class="portfolio-item">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -384,29 +421,37 @@
           </p>
         </div>
         <div class="footer-media-bloc">
-          <h2 class="footter-icon-title">Social media</h2>
-          <div class="footer-bloc-for-icon">
-            <div class="footer-icon-bloc">
-              <svg width="24px" height="24px" class="footer-icon">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </div>
-            <div class="footer-icon-bloc">
-              <svg width="24px" height="24px" class="footer-icon">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </div>
-            <div class="footer-icon-bloc">
-              <svg width="24px" height="24px" class="footer-icon">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </div>
-            <div class="footer-icon-bloc">
-              <svg width="24px" height="24px" class="footer-icon">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </div>
-          </div>
+          <p class="footter-icon-title">Social media</p>
+          <ul class="footer-icon-list">
+            <li class="footer-icon-item">
+              <a href="" class="footer-icon-link">
+                <svg width="24" height="24" class="footer-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="" class="footer-icon-link">
+                <svg width="24" height="24" class="footer-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="" class="footer-icon-link">
+                <svg width="24" height="24" class="footer-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a href="" class="footer-icon-link">
+                <svg width="24" height="24" class="footer-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
